k3s/redis/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: redis
spec:
  selector:
    matchLabels:
      app: "redis"
  # headless service that gives network identity to the RMQ nodes, and enables them to cluster
  serviceName: redis-headless
  volumeClaimTemplates:
  - metadata:
      name: redis-data
      namespace: redis
    spec:
      storageClassName: standard
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: "3Gi"
  template:
    metadata:
      name: redis
      namespace: redis
      labels:
        app: redis
    spec:
      volumes:
      - name: redis-config
        configMap:
          name: redis-config
      - name: redis-config-rw
        emptyDir: {}
      - name: redis-data
        persistentVolumeClaim:
          claimName: redis-data
      containers:
      - name: redis
        image: redis:7.0.0-alpine
        command: ["redis-server"]
        args: ["/etc/redis/redis.conf"]
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: redis-data
          mountPath: /data
        - name: redis-config-rw
          mountPath: /etc/redis/
      - name: redis-commander
        image: ghcr.io/joeferner/redis-commander
        ports:
        - name: redis-commander
          containerPort: 8081
  replicas: 3
