k3s/redis/headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-headless
  namespace: redis
spec:
  clusterIP: None
  ports:
  - port: 6379
    targetPort: 6379
    name: redis
  selector:
    app: redis
