k3s/redis/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: redis-commander-ingress
  namespace: redis
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure

spec:
  rules:
    - host: redis.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-headless
                port:
                  number: 8081
